# cppli

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  amalgamate.py
.github/: delete_all_caches.sh
.github/actions/test/: action.yaml
.github/workflows/: build-and-test.yaml  build-test-and-generate-single-header.yml  cmake.yml  delete_all_caches_weekly.yaml  test.yaml
docs/: 0-introduction_and_contents.md  1-commands.md  10-errors.md  12-anticipated_faq.md  2-arguments.md  3-flags.md  4-options.md  8-positional_separators.md  9-string_conversion.md  anticipated_faq.md  cli_rules.md  errors.md  flags.md  introduction_and_contents.md
docs/argument_types/: options.md
docs/docs/: 0-commands.md  1-arguments.md  11-anticipated_faq.md  7-positional_separators.md  9-errors.md  short_name_grouping.md
examples/: 0-echo.cpp  1-add.cpp  2-file_manager.cpp
include/cppli/: command_macros.h  configuration.h  documentation.h  error.h  run.h
include/cppli/detail/: arg_parsing.h  argument_processing_checks.h  cli_error.h  command.h  command_registration.h  configuration.h  constexpr_string_literal.h  conversions.h  documentation.h  error.h  parameter_types.h  process_argument.h  subcommand.h  subcommand_macros.h  template_utils.h  user_error.h
single-header/: cppli.h
single-header-amalgamation/: amalgamate.py  cppli_single_header_source.h
single_header/: cppli.h
single_header/amalgamation_src_header/: amalgamate.py  cppli.h
src/: arg_parsing.cpp  cli_error.cpp  command.cpp  command_macros.cpp  command_registration.cpp  configuration.cpp  cppli.cpp  cppli.h  documentation.cpp  run.cpp  subcommand.cpp  user_error.cpp
src/arg_parsing/: arg_parsing.cpp  arg_parsing.h
src/arg_parsing/argument_types/: parse_long_name.cpp  parse_positional.cpp
src/command_registration/: command_registration.cpp  command_registration.h
src/configuration/: configuration.cpp  configuration.h
src/documentation/: documentation.cpp  documentation.h
src/exceptions/: exceptions.cpp  exceptions.h
src/macros/: macros.h  subcommand_macros.h
src/parameter_types/: conversions.h  parameter_types.h
src/state/: subcommand.cpp  subcommand.h
src/subcommand/: subcommand.cpp
src/types/: conversions.h  parameter_types.cpp  parameter_types.h  types.cpp  types.h
src/user_error/: user_error.cpp  user_error.h
src/util/: constexpr_string_literal.h  test_utils.h
test/: test-commands.cpp  test-default_constructed_parameters.cpp  test-flags.cpp  test-main.cpp  test-options.cpp  test-parsing.cpp  test-positional_separator.cpp  test-positionals.cpp  test-repeated_parameter_names.cpp  test-user_defined_conversions.cpp  test_utils.h
tools/: .amalgamate.py.swp  amalgamate.py  cppli_single_header.h
